--- a/source/tools/conv/Makefile
+++ b/source/tools/conv/Makefile
@@ -6,7 +6,7 @@ BUILDDIRS = $(addprefix $(BUILDL)/,$(SUBDIRS))
 DEPS = $(shell find $(BUILDDIRS) -name "*.d")
 
 CC = g++
-CFLAGS = $(CPPWFLAGS)
+CFLAGS = $(CPPWFLAGS) -g
 
 # sources
 CSRC = $(shell find $(SUBDIRS) -name "*.cpp")
