MMIX loads the disk-driver =) But it quits very quickly :D

--- a/source/Makefile
+++ b/source/Makefile
@@ -194,7 +194,7 @@ endif
 
 mmix:	all hdd prepareRun
 		$(GIMSIM) -r $(GIMMON) -o log.txt -c -t 1 -d $(HDD) -i --script=gimmix.start \
-			-b -s $(BUILD)/stage2.map $(BUILD)/kernel.map
+			-b -s $(BUILD)/kernel.map $(BUILD)/driver_disk.map
 
 mmixd:	all hdd prepareRun
 		$(GIMSIM) -r $(GIMMON) -t 1 -d $(HDD) -p 1235
