Further improved the performance (fs without locks when no threadpool is used, readdate() opens /dev/rtc only once, requests are not allocated on heap)

--- a/source/Makefile
+++ b/source/Makefile
@@ -186,7 +186,7 @@ endif
 
 mmix:	all hdd prepareRun
 	$(GIMSIM) -r $(GIMMON) -o log.txt -c -t 1 -d $(HDD) -i --script=gimmix.start \
-		-b -s $(BUILD)/kernel.map $(BUILD)/driver_disk.map
+		-b -s $(BUILD)/kernel.map $(BUILD)/user_init.map
 
 mmixd:	all hdd prepareRun
 	$(GIMSIM) -r $(GIMMON) -t 1 -d $(HDD) -p 1235
