--- a/source/kernel/test/Makefile
+++ b/source/kernel/test/Makefile
@@ -22,9 +22,12 @@ KSRC = $(filter-out $(shell find ../src/arch -name "*.c"),\
 	$(shell find ../src -name "*.c" | grep -v '\.svn'))
 KSRC += $(filter-out ../src/arch/$(ARCH)/start.c,\
 	$(shell find ../src/arch/$(ARCH) -name "*.c" | grep -v '\.svn'))
-KASRC = $(filter-out $(shell find ../src/arch -name "*.s"),\
+KASRC = ../src/arch/$(ARCH)/kernel.s
+KASRC += $(filter-out $(shell find ../src/arch -name "*.s"),\
 	$(shell find ../src -name "*.s" | grep -v '\.svn'))
-KASRC += $(shell find ../src/arch/$(ARCH) -name "*.s" | grep -v '\.svn')
+KASRC += $(filter-out ../src/arch/$(ARCH)/end.s ../src/arch/$(ARCH)/kernel.s,\
+	$(shell find ../src/arch/$(ARCH) -name "*.s" | grep -v '\.svn'))
+KAEND = ../src/arch/$(ARCH)/end.s
 LSRC = $(filter-out $(shell find $(LIB)/arch -name "*.c"),\
 	$(shell find $(LIB) -name "*.c" | grep -v '\.svn'))
 LSRC += $(shell find $(LIB)/arch/$(ARCH) -name "*.c" | grep -v '\.svn')
@@ -36,6 +39,7 @@ KOBJ = $(patsubst %.c,$(BUILDK)/%.o,$(KSRC))
 KAOBJ = $(patsubst %.s,$(BUILDK)/%.s.o,$(KASRC))
 LOBJ = $(patsubst $(LIB)/%.c,$(BUILDT)/lib/%.o,$(LSRC))
 LAOBJ = $(patsubst $(LIB)/%.s,$(BUILDT)/lib/%.s.o,$(LASRC))
+KAENDOBJ = $(patsubst %.s,$(BUILDK)/%.s.o,$(KAEND))
 
 SYMBOLS = $(BUILD)/kernelt_symbols.txt
 SYMBOLSCRIPT = $(ROOT)/tools/gensymbols.sh
@@ -46,9 +50,10 @@ SYMBOLOBJ = $(patsubst ../src/%.c,$(BUILDT)/%.o,$(SYMBOLSRC))
 
 all: $(BIN) $(MAP)
 
-$(BIN):	$(BUILDDIRS) $(LDCONF) $(KAOBJ) $(KOBJ) $(TOBJ) $(LOBJ) $(LAOBJ)
+$(BIN):	$(BUILDDIRS) $(LDCONF) $(KAOBJ) $(KOBJ) $(TOBJ) $(LOBJ) $(LAOBJ) $(KAENDOBJ)
 	@echo "	" LINKING $(BIN)
-	@$(CC) $(CFLAGS) -Wl,-T,$(LDCONF) -o $(BIN) $(KAOBJ) $(KOBJ) $(TOBJ) $(LOBJ) $(LAOBJ) -lgcc;
+	@$(CC) $(CFLAGS) -Wl,-T,$(LDCONF) -o $(BIN) \
+		$(KAOBJ) $(KOBJ) $(TOBJ) $(LOBJ) $(LAOBJ) $(KAENDOBJ) -lgcc;
 	@# Note that we link 2 additional times because otherwise the symbol-table is incorrect
 	@# since it's size is 0 at the first time. In the second pass the size is correct
 	@# and therefore the symbol-table will be generated correctly in the third pass :)
@@ -57,13 +62,15 @@ $(BIN):	$(BUILDDIRS) $(LDCONF) $(KAOBJ) $(KOBJ) $(TOBJ) $(LOBJ) $(LAOBJ)
 	@echo "	" CC $(SYMBOLSRC)
 	@$(CC) $(CFLAGS) -o $(SYMBOLOBJ) -c $(SYMBOLSRC)
 	@echo "	" LINKING $(BIN)
-	@$(CC) $(CFLAGS) -Wl,-T,$(LDCONF) -o $(BIN) $(KAOBJ) $(KOBJ) $(TOBJ) $(LOBJ) $(LAOBJ) -lgcc;
+	@$(CC) $(CFLAGS) -Wl,-T,$(LDCONF) -o $(BIN) \
+		$(KAOBJ) $(KOBJ) $(TOBJ) $(LOBJ) $(LAOBJ) $(KAENDOBJ) -lgcc;
 	@echo "	" BUILDING SYMBOL-FILE
 	@$(SYMBOLSCRIPT) $(BIN) > $(SYMBOLS)
 	@echo "	" CC $(SYMBOLSRC)
 	@$(CC) $(CFLAGS) -o $(SYMBOLOBJ) -c $(SYMBOLSRC)
 	@echo "	" LINKING $(BIN)
-	@$(CC) $(CFLAGS) -Wl,-T,$(LDCONF) -o $(BIN) $(KAOBJ) $(KOBJ) $(TOBJ) $(LOBJ) $(LAOBJ) -lgcc;
+	@$(CC) $(CFLAGS) -Wl,-T,$(LDCONF) -o $(BIN) \
+		$(KAOBJ) $(KOBJ) $(TOBJ) $(LOBJ) $(LAOBJ) $(KAENDOBJ) -lgcc;
 
 $(MAP): $(BIN)
 	@echo "	" GEN MAP $@
