Improved the test-system, ls and ps and the performance a bit.

--- a/source/Makefile
+++ b/source/Makefile
@@ -1,8 +1,8 @@
 # general
-#ARCH = mmix
-#GCCVER = 4.6.0
-ARCH = i586
-GCCVER = 4.4.3
+ARCH = mmix
+GCCVER = 4.6.0
+#ARCH = i586
+#GCCVER = 4.4.3
 #ARCH = eco32
 #GCCVER = 4.4.3
 TARGET = $(ARCH)-elf-escape
@@ -96,6 +96,7 @@ endif
 # correctly
 ifeq ($(ARCH),mmix)
 CDEFFLAGS += -mno-base-addresses
+CPPDEFFLAGS += -mno-base-addresses
 # do not warn if instructions are extended to setl,incml,...
 ASFLAGS += -x
 endif
@@ -186,14 +187,21 @@ endif
 
 mmix:	all hdd prepareRun
 	$(GIMSIM) -r $(GIMMON) -o log.txt -c -t 1 -d $(HDD) -i --script=gimmix.start \
-		-b -s $(BUILD)/kernel.map $(BUILD)/driver_disk.map
+		-b -s $(BUILD)/kernel.map $(BUILD)/user_ps.map
 
 mmixd:	all hdd prepareRun
-	$(GIMSIM) -r $(GIMMON) -t 1 -d $(HDD) -p 1235
+	$(GIMSIM) -r $(GIMMON) -o log.txt -c -t 1 -d $(HDD) -p 1234 >/dev/null 2>&1 &
+	sleep 1;
+	/opt/mmix/bin/mmix-gdbtui --command=gdb.start --symbols $(BUILD)/user_ls.bin
 
 testm:	all hdd prepareTest
 	$(GIMSIM) -r $(GIMMON) -m 20 -t 1 -d $(HDD) -o log.txt -c -i --script=gimmix.start \
 		-b -s $(BUILD)/kernel_test.map
+
+testmd:	all hdd prepareTest
+	$(GIMSIM) -r $(GIMMON) -m 20 -t 1 -d $(HDD) -o log.txt -c -p 1234 >/dev/null 2>&1 &
+	sleep 1;
+	/opt/mmix/bin/mmix-gdbtui --command=gdb.start --symbols $(BUILD)/kernel_test.bin
 
 eco:	all hdd prepareRun
 	$(ECOSIM) -r $(ECOMON) -t 1 -d $(HDD) -o log.txt -c -i \
