Improved the user-heap and fixed a bug in bintree of c++-lib

--- a/source/Makefile
+++ b/source/Makefile
@@ -1,12 +1,12 @@
 # general
-ARCH = mmix
-GCCVER = 4.6.0
-#ARCH = i586
-#GCCVER = 4.4.3
+#ARCH = mmix
+#GCCVER = 4.6.0
+ARCH = i586
+GCCVER = 4.4.3
 #ARCH = eco32
 #GCCVER = 4.4.3
 TARGET = $(ARCH)-elf-escape
-BUILDDIR = $(abspath build/$(ARCH)-release)
+BUILDDIR = $(abspath build/$(ARCH)-debug)
 DIST = ../toolchain/$(ARCH)
 DISKMOUNT = diskmnt
 HDD = $(BUILDDIR)/hd.img
@@ -187,7 +187,7 @@ endif
 
 mmix:	all hdd prepareRun
 	$(GIMSIM) -r $(GIMMON) -o log.txt -c -t 1 -d $(HDD) -i --script=gimmix.start \
-		-b -s $(BUILD)/kernel.map $(BUILD)/driver_vterm.map
+		-b -s $(BUILD)/kernel.map $(BUILD)/user_ls.map
 
 mmixd:	all hdd prepareRun
 	$(GIMSIM) -r $(GIMMON) -o log.txt -c -t 1 -d $(HDD) -p 1234 >/dev/null 2>&1 &
