Changed libctest, so that it runs on MMIX. Fixed a bug in message-system (type-sizes)

--- a/source/user/c/Makefile
+++ b/source/user/c/Makefile
@@ -1,11 +1,7 @@
-ifeq ($(ARCH),eco32)
-	DIRS = $(filter-out $(wildcard *.*) shlibtest dynlink Makefile,$(wildcard *))
+ifneq ($(ARCH),i586)
+	DIRS = $(filter-out $(wildcard *.*) dynlink Makefile,$(wildcard *))
 else
-ifeq ($(ARCH),mmix)
-	DIRS = $(filter-out $(wildcard *.*) libctest shlibtest dynlink Makefile,$(wildcard *))
-else
-	DIRS = $(filter-out $(wildcard *.*) shlibtest Makefile,$(wildcard *))
-endif
+	DIRS = $(filter-out $(wildcard *.*) Makefile,$(wildcard *))
 endif
 
 .PHONY:  all clean
