--- a/source/user/c/libctest/Makefile
+++ b/source/user/c/libctest/Makefile
@@ -1,4 +1,9 @@
 NAME=libctest
 SUBDIR=tests
+ifeq ($(LINKTYPE),static)
+	ADDLIBS += $(BUILD)/libusergroup.a
+else
+	ADDFLAGS = -lusergroup
+endif
 
 -include ../RecMakefile.mk
