--- a/source/user/c/login/Makefile
+++ b/source/user/c/login/Makefile
@@ -1,3 +1,8 @@
 NAME=login
+ifeq ($(LINKTYPE),static)
+	ADDLIBS += $(BUILD)/libusergroup.a
+else
+	ADDFLAGS = -lusergroup
+endif
 
 -include ../SimpleMakefile.mk
