Started to extend the permission-system to be able to specify permissions for msg-sending. And changed the driver-loading-specification.

--- a/source/user/cpp/init/Makefile
+++ b/source/user/cpp/init/Makefile
@@ -1,3 +1,8 @@
 NAME=init
+ifeq ($(LINKTYPE),static)
+	ADDLIBS += $(BUILD)/libusergroup.a
+else
+	ADDFLAGS = -lusergroup
+endif
 
 -include ../DefMakefile.mk
