Improved the window-manager. Now it uses multithreading; one thread for the driver, one for reading from mouse and one for reading from keyboard.

--- a/source/Makefile
+++ b/source/Makefile
@@ -1,6 +1,6 @@
 # general
-ARCH = mmix
-GCCVER = 4.6.0
+ARCH = i586
+GCCVER = 4.4.3
 TARGET = $(ARCH)-elf-escape
 BUILDDIR = $(abspath build/$(ARCH)-release)
 DIST = ../toolchain/$(ARCH)
