Implemented flowlayout, fixed a lot of bugs in graphics and improved the build-system

--- a/source/drivers/common/vterm/Makefile
+++ b/source/drivers/common/vterm/Makefile
@@ -1,4 +1,5 @@
 NAME=vterm
+LIBDEPS += $(BUILD)/libvterm.a $(BUILD)/libusergroup.a
 ifeq ($(LINKTYPE),static)
 	ADDLIBS += $(BUILD)/libvterm.a $(BUILD)/libusergroup.a
 else
