--- a/source/user/c/libctest/Makefile
+++ b/source/user/c/libctest/Makefile
@@ -1,5 +1,6 @@
 NAME=libctest
 SUBDIR=tests
+LIBDEPS += $(BUILD)/libusergroup.a
 ifeq ($(LINKTYPE),static)
 	ADDLIBS += $(BUILD)/libusergroup.a
 else
