--- a/source/user/cpp/guishell/Makefile
+++ b/source/user/cpp/guishell/Makefile
@@ -1,4 +1,5 @@
 NAME = guishell
+LIBDEPS += $(BUILD)/libgui.a $(BUILD)/libvterm.a $(BUILD)/libshell.a
 ifeq ($(LINKTYPE),static)
 	ADDLIBS += $(BUILD)/libgui.a $(BUILD)/libvterm.a $(BUILD)/libshell.a
 else
