--- a/source/lib/cpp/Makefile
+++ b/source/lib/cpp/Makefile
@@ -1,6 +1,7 @@
 NAME = stdc++
 ADDFLAGS = -nodefaultlibs
 ADDLIBS = -lc
+LIBDEPS += $(BUILD)/libc.a
 ADDSTLIB = $(ROOT)/../toolchain/$(ARCH)/lib/libsupc++.a
 ifeq ($(LIBGCC),static)
 	ADDLIBS += -lgcc -lgcc_eh
