The scrollpane does now use moveRows/moveCols and does not always repaint everything. That means, we have a very generic and simple (re)paintRect strategie :)

--- a/source/Makefile
+++ b/source/Makefile
@@ -2,7 +2,7 @@
 ARCH = i586
 GCCVER = 4.4.3
 TARGET = $(ARCH)-elf-escape
-BUILDDIR = $(abspath build/$(ARCH)-debug)
+BUILDDIR = $(abspath build/$(ARCH)-release)
 DIST = ../toolchain/$(ARCH)
 DISKMOUNT = diskmnt
 HDD = $(BUILDDIR)/hd.img
