Now we can use the mousewheel to scroll =)

--- a/source/bochs.cfg
+++ b/source/bochs.cfg
@@ -34,7 +34,7 @@ keyboard_paste_delay: 100000
 keyboard_mapping: enabled=1, map=/usr/local/share/bochs/keymaps/x11-pc-de.map
 cpu: count=1, ips=20000000
 #text_snapshot_check: 0
-mouse: enabled=0
+mouse: enabled=0, type=imps2
 private_colormap: enabled=0
 clock: sync=none, time0=local
 #clock: sync=slowdown, time0=local
