--- a/source/kernel/test/Makefile
+++ b/source/kernel/test/Makefile
@@ -74,7 +74,7 @@ $(BIN):	$(BUILDDIRS) $(LDCONF) $(KAOBJ) $(KOBJ) $(TOBJ) $(LOBJ) $(LAOBJ) $(KAEND
 
 $(MAP): $(BIN)
 	@echo "	" GEN MAP $@
-	@$(NM) -S $(BIN) | $(ROOT)/tools/createmap-mmix.php > $@
+	@$(ROOT)/tools/createmap-$(ARCH) $(BIN) > $@
 
 $(BUILDDIRS):
 	@for i in $(BUILDDIRS); do \
