Dynamic linking works again. Previously I changed the linkage-stuff, so that the files of the libsupc++ were linked to the libstdc++, which allowed us to link c++-apps in an ordinary way. Unfortunatly, that doesn't work, because some of the object-files in libsupc++ use PC32-relocs (e.g. malloc), which aren't directly relocatable since they are present in the libc. But we can't lookup that symbol in the libc and change it in the code, because the PC-relative offset depends on the libraries used and their order, but the code is shared. Perhaps we have to change our gcc-config? not really PIC-code in libsupc++? I don't know, but I decided to undo this change, so that the object-files in the libsupc++ are linked statically to every c++-app manually. Not nice, but it works again :)

--- a/source/Makefile
+++ b/source/Makefile
@@ -17,7 +17,7 @@ BIN = $(BUILDDIR)/$(BINNAME)
 SYMBOLS = $(BUILDDIR)/kernel.symbols
 
 # simulators
-KVM = -enable-kvm
+#KVM = -enable-kvm
 QEMU = qemu
 #-net nic,model=ne2k_pci -net user 
 QEMUARGS = -serial stdio -hda $(HDD) -boot order=d -vga std -m 32 -localtime
@@ -29,9 +29,9 @@ GIMMIX = /home/hrniels/mmix/gimmix-escape
 GIMSIM = $(GIMMIX)/build/gimmix
 GIMMON = $(GIMMIX)/build/tests/manual/hexmon.rom
 
-# whether to link drivers and user-apps statically or dynamically
+# whether to link drivers and user-apps statically or dynamically (static | dynamic)
 export LINKTYPE = static
-# if LINKTYPE = dynamic: whether to use the static or dynamic libgcc (and libgcc_eh)
+# if LINKTYPE = dynamic: whether to use the static or dynamic libgcc (static | dynamic)
 export LIBGCC = dynamic
 
 # various variables, that are used in many makefiles and shellscripts
