As it seems, most of the SMP-problems are fixed now. Although there are still some, they're very rare =)

--- a/source/bochs.cfg
+++ b/source/bochs.cfg
@@ -153,10 +153,10 @@ cpu: count=4, ips=20000000
 # The default is 32MB, most OS's won't need more than that.
 # The maximum amount of memory supported is 2048Mb.
 #=======================================================================
-#megs: 256
+megs: 256
 #megs: 128
 #megs: 64
-megs: 32
+#megs: 32
 #megs: 16
 #megs: 8
 
@@ -833,7 +833,7 @@ port_e9_hack: enabled=1
 #   debug_symbols: file="kernel.sym"
 #   debug_symbols: file="kernel.sym", offset=0x80000000
 #=======================================================================
-#debug_symbols: file="kernel.sym"
+debug_symbols: file="build/i586-debug/kernel.map"
 
 #=======================================================================
 # other stuff
