Rewrote signal-handling, improved other things, fixed bugs in multithreaded-fs and related things in kernel. ECO32 and MMIX works as well :)

--- a/source/bochs.cfg
+++ b/source/bochs.cfg
@@ -395,7 +395,7 @@ floppy_bootsig_check: disabled=0
 #   log: /dev/tty
 #=======================================================================
 #log: /dev/null
-log: bochs.txt
+log: bochs2.txt
 
 #=======================================================================
 # LOGPREFIX:
@@ -833,7 +833,7 @@ port_e9_hack: enabled=1
 #   debug_symbols: file="kernel.sym"
 #   debug_symbols: file="kernel.sym", offset=0x80000000
 #=======================================================================
-debug_symbols: file="build/i586-debug/kernel.map"
+debug_symbols: file=/home/hrniels/escape/source/build/i586-debug/kernel.map
 
 #=======================================================================
 # other stuff
