Fixed an important issue: We have to handle copy-on-write when writing to user-space! Because on x86 the kernel can write to readonly-pages. Thus, we need a check before the copy. But because of SMP we have to make sure that nobody can change that in between. Therefore, we have to do that directly before copying and have to lock the regions during that time. Very unconvenient and unelegant, but I think, there is no other way :(

--- a/source/bochs.cfg
+++ b/source/bochs.cfg
@@ -395,7 +395,7 @@ floppy_bootsig_check: disabled=0
 #   log: /dev/tty
 #=======================================================================
 #log: /dev/null
-log: bochs2.txt
+log: bochs.txt
 
 #=======================================================================
 # LOGPREFIX:
