--- a/source/bochs.cfg
+++ b/source/bochs.cfg
@@ -145,7 +145,7 @@ romimage: file="/usr/local/share/bochs/BIOS-bochs-latest"
 #  2.0.1 1.6Ghz Intel P4 with Win2000/g++ 3.3             5 to  7 Mips
 #=======================================================================
 #cpu: count=1, ips=50000000, reset_on_triple_fault=1, cpuid_limit_winnt=0, msrs="msrs.def"
-cpu: count=1, ips=20000000
+cpu: count=4, ips=20000000
 
 #=======================================================================
 # MEGS
@@ -438,7 +438,7 @@ logprefix: %t%e%d
 panic: action=ask
 error: action=report
 info: action=report
-debug: action=report
+debug: action=ignore
 #pass: action=fatal
 
 #=======================================================================
